# mod_audio_stream

./: .gitignore  .gitmodules  AUDIT_PHASE1.md  AUDIT_PHASE2.md  AUDIT_PHASE3.md  AUDIT_PHASE4.md  AUDIT_PHASE5.md  AUDIT_PHASE6.md  CMakeLists.txt  LICENSE  README.debian  README.md  ai_engine_glue.cpp  audio_streamer_glue.cpp  audio_streamer_glue.h  base64.cpp  base64.h  build-mod-audio-stream.sh  easywsclient.cpp  easywsclient.hpp  mod_audio_stream.c  mod_audio_stream.h  streamer.cpp  streamer.h
.github/: FUNDING.yml
Ai_code/: .env  .env.example  ARCHITECTURE_CUSTOM_VOICE.md  README.md  VOICE_CLONE_SETUP.md  ai_check.py  ai_correct.py  checkString.py  dialplan.xml.txt  echo_server.py  main.py  openAi.py  pyproject.toml  requirements.txt  wss.pem
Ai_code/app/: __init__.py  selftest_client.py
Ai_code/bridge/: __init__.py  app.py  audio.py  config.py  fs_payloads.py  logging_utils.py  openai_client.py  resample.py
Ai_code/bridge/scaling/: __init__.py  health.py  metrics.py
Ai_code/bridge/tts/: __init__.py  base.py  cache.py  cartesia.py  elevenlabs.py  factory.py  openai_tts.py  selfhosted.py  sentence_buffer.py
Ai_code/tests/: test_10k_final.py  test_10k_mega.py  test_10k_ultra_hard.py  test_1k_ultra_hard.py  test_audio_alignment.py  test_dsp.py  test_fs_payloads.py  test_resample.py  test_ultra_advanced.py
ai_engine/: ai_engine.cpp  ai_engine.h  dsp_pipeline.cpp  dsp_pipeline.h  openai_realtime.cpp  openai_realtime.h  ring_buffer.h  sentence_buffer.cpp  sentence_buffer.h  tts_cache.cpp  tts_cache.h  tts_elevenlabs.cpp  tts_engine.h
cmake/: FindSpeexDSP.cmake  Packing.cmake
debian/: changelog  copyright
