cmake_minimum_required(VERSION 3.18)
project(mod_audio_stream
        VERSION 1.0.0
        DESCRIPTION "Audio streaming module for FreeSWITCH."
        HOMEPAGE_URL "https://github.com/amigniter/mod_audio_stream")

include(GNUInstallDirs)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_SHARED_LIBRARY_SUFFIX ".so")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g")

option(ENABLE_LOCAL "Enable local compile/debug specific" OFF)
if(ENABLE_LOCAL)
    set(ENV{PKG_CONFIG_PATH} "/usr/local/freeswitch/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")
endif()
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

find_package(PkgConfig REQUIRED)
find_package(SpeexDSP REQUIRED)
find_package(CURL REQUIRED)

# The AI engine connects to wss://api.openai.com which requires TLS.
# Force USE_TLS=ON in the WebSocket sub-library so OpenSSL is linked.
set(USE_TLS ON CACHE BOOL "Enable TLS/SSL support using OpenSSL" FORCE)
find_package(OpenSSL REQUIRED)

# FreeSWITCH discovery
# Prefer pkg-config (normal installs). If you only have a FreeSWITCH source tree
# (e.g. cloned from GitHub), you can point CMake at it via FREESWITCH_SRC_ROOT.
option(ENABLE_FREESWITCH_PKGCONFIG "Use pkg-config to find FreeSWITCH" ON)

set(FREESWITCH_SRC_ROOT "" CACHE PATH "Path to FreeSWITCH source root (contains src/include/switch.h)")
set(FREESWITCH_INCLUDE_DIR "" CACHE PATH "Path to FreeSWITCH headers (contains switch.h)")
set(FREESWITCH_LIBRARY "" CACHE FILEPATH "Path to FreeSWITCH library (libfreeswitch.so/.dylib)")
set(FS_MOD_DIR "" CACHE PATH "FreeSWITCH modules install directory (optional; used by make install)")

if(ENABLE_FREESWITCH_PKGCONFIG)
    pkg_check_modules(FreeSWITCH QUIET IMPORTED_TARGET freeswitch)
endif()

if(FreeSWITCH_FOUND)
    if(NOT FS_MOD_DIR)
        pkg_get_variable(FS_MOD_DIR freeswitch modulesdir)
    endif()
    message(STATUS "Found FreeSWITCH via pkg-config")
    message(STATUS "FreeSWITCH modules dir: ${FS_MOD_DIR}")
else()
    # If a FreeSWITCH source tree is provided, default the include dir.
    if(FREESWITCH_SRC_ROOT AND NOT FREESWITCH_INCLUDE_DIR)
        set(FREESWITCH_INCLUDE_DIR "${FREESWITCH_SRC_ROOT}/src/include")
    endif()

    # FreeSWITCH's switch.h includes <switch_am_config.h>, which is generated by
    # its autotools build. When using a source checkout that hasn't been built
    # yet, that header will be missing, breaking compilation.
    #
    # The template (switch_am_config.h.in) contains many @placeholders@ that
    # require the full FreeSWITCH configure step. We can't reliably reproduce
    # that here, but for *compiling this module* it's sufficient to provide sane
    # platform defaults.
    if(FREESWITCH_SRC_ROOT)
        set(_FS_AM_CONFIG_IN "${FREESWITCH_SRC_ROOT}/src/include/switch_am_config.h.in")
        set(_FS_AM_CONFIG_OUT "${FREESWITCH_SRC_ROOT}/src/include/switch_am_config.h")
        if(EXISTS "${_FS_AM_CONFIG_IN}" AND NOT EXISTS "${_FS_AM_CONFIG_OUT}")
            # Write a minimal config with correct primitive mappings for macOS/Linux.
            # These macros are consumed by switch_platform.h.
            set(_fs_am_config_contents "#ifndef SWITCH_AM_CONFIG_H\n#define SWITCH_AM_CONFIG_H\n\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_INT_16  short\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_INT_32  int\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_INT_64  long long\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_SIZE_T  size_t\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_SSIZE_T ssize_t\n")
            string(APPEND _fs_am_config_contents "\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_SIZEOF_VOIDP ${CMAKE_SIZEOF_VOID_P}\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_PREFIX_DIR \"\"\n")
            string(APPEND _fs_am_config_contents "\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_SSIZE_T_FMT \"%zd\"\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_SIZE_T_FMT  \"%zu\"\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_INT64_T_FMT  \"%lld\"\n")
            string(APPEND _fs_am_config_contents "#define SWITCH_UINT64_T_FMT \"%llu\"\n")
            string(APPEND _fs_am_config_contents "\n#endif\n")
            file(WRITE "${_FS_AM_CONFIG_OUT}" "${_fs_am_config_contents}")
            message(STATUS "Generated minimal ${_FS_AM_CONFIG_OUT} for header-only use")
        endif()
    endif()

    if(NOT FREESWITCH_INCLUDE_DIR)
        message(FATAL_ERROR "FreeSWITCH not found. Either install FreeSWITCH dev so pkg-config finds 'freeswitch', or configure -DFREESWITCH_SRC_ROOT=... (or -DFREESWITCH_INCLUDE_DIR=... plus -DFREESWITCH_LIBRARY=... if already built).")
    endif()

    message(STATUS "Using FreeSWITCH headers from: ${FREESWITCH_INCLUDE_DIR}")
    if(FREESWITCH_LIBRARY)
        message(STATUS "Using FreeSWITCH library: ${FREESWITCH_LIBRARY}")
    else()
        message(WARNING "FREESWITCH_LIBRARY not set. You can compile against headers, but linking will fail until you build/install FreeSWITCH and provide the library path.")
    endif()
endif()

add_subdirectory(libs/libwsc)

add_library(mod_audio_stream SHARED 
    mod_audio_stream.c
    mod_audio_stream.h
    audio_streamer_glue.h
    audio_streamer_glue.cpp
    base64.cpp
    ai_engine_glue.cpp
    ai_engine/dsp_pipeline.cpp
    ai_engine/sentence_buffer.cpp
    ai_engine/tts_elevenlabs.cpp
    ai_engine/tts_cache.cpp
    ai_engine/openai_realtime.cpp
    ai_engine/ai_engine.cpp
)

set_property(TARGET mod_audio_stream PROPERTY POSITION_INDEPENDENT_CODE ON)

target_link_libraries(mod_audio_stream PRIVATE 
    pthread
    libwsc
    ${SPEEXDSP_LIBRARIES}
    CURL::libcurl
)

# Define HAVE_SWITCH_H so ai_engine/*.cpp uses switch_log_printf
# instead of fprintf(stderr, ...).
target_compile_definitions(mod_audio_stream PRIVATE HAVE_SWITCH_H)

target_include_directories(mod_audio_stream PRIVATE
    ${SPEEXDSP_INCLUDE_DIRS}
    ${CURL_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/ai_engine
)

if(FreeSWITCH_FOUND)
    target_link_libraries(mod_audio_stream PRIVATE PkgConfig::FreeSWITCH)
else()
    target_include_directories(mod_audio_stream PRIVATE ${FREESWITCH_INCLUDE_DIR})
    if(FREESWITCH_SRC_ROOT)
        # Additional include dirs commonly needed when using a source checkout
        # without running a full system install.
        target_include_directories(mod_audio_stream PRIVATE
            ${FREESWITCH_SRC_ROOT}/src/include
            ${FREESWITCH_SRC_ROOT}/libs/libteletone/src
        )
    endif()
    if(FREESWITCH_LIBRARY)
        target_link_libraries(mod_audio_stream PRIVATE ${FREESWITCH_LIBRARY})
    endif()
endif()

if(CMAKE_BUILD_TYPE MATCHES "Release")
    set_target_properties(${PROJECT_NAME} 
        PROPERTIES 
        LINK_FLAGS_RELEASE "-s")
endif()

set(CPACK_COMPONENTS_ALL ${PROJECT_NAME} changelog.gz copyright)
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libspeexdsp1, openssl, zlib1g, libfreeswitch1, libcurl4")
set(CPACK_PACKAGE_NAME "mod-audio-stream")
set(CMAKE_INSTALL_DOCDIR "share/doc/${CPACK_PACKAGE_NAME}")

add_custom_command(
    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/debian/changelog"
    COMMAND gzip -cn9 "${CMAKE_CURRENT_SOURCE_DIR}/debian/changelog" > "${CMAKE_CURRENT_BINARY_DIR}/changelog.gz"
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/changelog.gz"
    COMMENT "Processing copyright file"
)
add_custom_target(changelog_target ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/changelog.gz")

add_custom_command(
    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/debian/copyright"
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/debian/copyright" "${CMAKE_CURRENT_BINARY_DIR}/copyright"
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/copyright"
    COMMENT "Generating compressed changelog.gz"
)
add_custom_target(copyright_target ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/copyright")

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/copyright"
        DESTINATION "${CMAKE_INSTALL_DOCDIR}"
        COMPONENT copyright
)

if(FS_MOD_DIR)
    install(TARGETS ${PROJECT_NAME}
            COMPONENT ${PROJECT_NAME}
            DESTINATION ${FS_MOD_DIR})
else()
    message(STATUS "FS_MOD_DIR not set; 'make install' will not install the module. Set FS_MOD_DIR (or install FreeSWITCH so pkg-config can provide it).")
endif()

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/changelog.gz"
	DESTINATION "${CMAKE_INSTALL_DOCDIR}"
	COMPONENT changelog.gz
)

message(STATUS "Components to pack: ${CPACK_COMPONENTS_ALL}")

include(Packing)
